Implement APIs like/pass person
